--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,17 @@
 
   <p>Explorez mes projets de science des données :</p>
   <ul>
-      <li><a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a></li>
+      <a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a>
   </ul>
 
   <p>Explorez mes projets d'analyses des données :</p>
   <ul>
-      <li><a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a></li>
+      <a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a>
   </ul>
 
   <p>Parcourez une version plus complète de mon CV :</p>
   <ul>
-      <li><a href="/cv">CV</a></li>
+      <a href="/cv">CV</a>
   </ul>
 </div>
 {% endblock %}
