--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -18,20 +18,20 @@
 
 <section>
   <h2>Compétences</h2><br>
-  <h3>Data Science :</h3>
-  <p><important-text>Langages &amp; frameworks :</important-text><br>
+  <h3>Data Science</h3>
+  <p><important-text>Langages &amp; frameworks</important-text><br>
   Python, MySQL, PostgreSQL, NoSQL, Git, MLFlow</p>
-  <p><important-text>Machine &amp; Deep Learning :</important-text><br>
+  <p><important-text>Machine &amp; Deep Learning</important-text><br>
   Régression linéaire, XGBoost, SVM, Réseaux de neurones à convolution (CNN), Traitement du langage naturel (NLP)...</p>
-  <p><important-text>Big Data &amp; Cloud :</important-text><br>
+  <p><important-text>Big Data &amp; Cloud</important-text><br>
   PySpark, Hadoop, AWS</p>
-  <p><important-text>MLOps &amp; Déploiement :</important-text><br>
+  <p><important-text>MLOps &amp; Déploiement</important-text><br>
   Intégration Continue et Livraison Continue (CI/CD), API</p>
 
-  <h3>Machine Learning engineering :</h3>
+  <h3>Machine Learning engineering</h3>
   <p>PyCharm, Jira</p>
 
-  <h3>Langues :</h3>
+  <h3>Langues</h3>
   Français (Langue Maternelle)<br>
   Anglais (Courant)</p>
 </section><br>
@@ -230,4 +230,15 @@
   </ul>
 </section>
 <a href="/" class="btn">Retour à l'accueil</a>
+
+<!-- JavaScript for toggling -->
+<script>
+  function toggleSection(header) {
+    const content = header.nextElementSibling;
+    const icon = header.querySelector('.toggle-btn');
+    content.style.display = content.style.display === 'block' ? 'none' : 'block';
+    icon.classList.toggle('rotate');
+  }
+  </script>
+
 {% endblock %}
